--- a/classes/1/class_1-speaker.html
+++ b/classes/1/class_1-speaker.html
@@ -921,8 +921,8 @@ Geodetic CRS:  WGS 84
 <h2>Litterature assignment</h2>
 <p><a href="https://drive.proton.me/urls/TZGP2H4RRW#yKlicYbTWViB">Lez_1_Cagnacci_Animal ecology meets GPS-based radiotelemetry a perfect storm of opportunities and challenges_2010</a></p>
 </section>
-<section id="references" class="title-slide slide level1 smaller scrollable">
-<h1>References</h1>
+<section id="references" class="slide level2 smaller scrollable">
+<h2>References</h2>
 
 <div class="quarto-auto-generated-content">
 <p><img src="../../figures/Tor-Vergata_logo_cmyk.png" class="slide-logo"></p>
